--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.Uncover"
         tools:targetApi="31">
         <activity
+            android:name=".PlayerStatsActivity"
+            android:exported="false" />
+        <activity
             android:name=".QuestActivity"
             android:exported="false" />
         <activity
