--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     implementation libs.androidx.room.runtime
     implementation libs.androidx.room.ktx
+    implementation libs.androidx.storage
     ksp libs.androidx.room.compiler
     implementation libs.osmdroid
     implementation libs.androidx.core.ktx
