refactor: Reorganize project structure and implement clean architecture
- Create organized package structure (ui, domain, data, utils)
- Separate concerns into dedicated managers
- Move UI components to dedicated files
- Improve code readability and maintainability
- Implement proper navigation handling
- Clean up MainActivity and LoginManager implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,25 +22,25 @@
             android:name=".PlayerStatsActivity"
             android:exported="false" />
         <activity
-            android:name=".QuestActivity"
+            android:name=".ui.activities.QuestActivity"
             android:exported="false" />
         <activity
-            android:name=".LocationListActivity"
+            android:name=".ui.activities.LocationListActivity"
             android:exported="false" />
         <activity
-            android:name=".MainMenuActivity"
+            android:name=".ui.activities.MainMenuActivity"
             android:exported="false" />
         <activity
-            android:name=".CharacterCreationActivity"
+            android:name=".ui.activities.CharacterCreationActivity"
             android:exported="false" />
         <activity
-            android:name=".DatabaseActivity"
+            android:name=".ui.activities.DatabaseActivity"
             android:exported="false" />
         <activity
-            android:name=".MapActivity"
+            android:name=".ui.activities.MapActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
