--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.Uncover"
         tools:targetApi="31">
         <activity
-            android:name=".PlayerStatsActivity"
+            android:name=".ui.activities.PlayerStatsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activities.QuestActivity"
