--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation libs.androidx.constraintlayout
     implementation libs.androidx.splashscreen
     implementation(libs.androidx.lifecycle.viewmodel.compose)
+    implementation libs.google.gson
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
