--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.Uncover"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activities.AchievementActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.WelcomeActivity"
             android:exported="false" />
         <activity
