--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation libs.androidx.splashscreen
     implementation(libs.androidx.lifecycle.viewmodel.compose)
     implementation libs.google.gson
+    implementation libs.accompanist.systemuicontroller
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
